bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: not found: value abs
  if(abs(n) + 100 > 110 || abs(n) + 200 > 220) {
     ^NearHundred:2: error: not found: value abs
  if(abs(n) + 100 > 110 || abs(n) + 200 > 220) {
                           ^