bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if(abs(n) + 100 > 110 || abs(n) + 200 > 220) {
    return false;
  }
  
  return true;
}